# multithreading

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg-configuration.json  vcpkg.json
res/: toolchain.cmake
res/ports/toolchain/: CMakeLists.txt  portfile.cmake  toolchain.cmake.in  vcpkg.json
res/triplets/: multithreading.cmake  native.cmake
src/: benchmarks.cpp  logger.hpp  main.cpp  main.hpp
